// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Floating Action Buttons default 1`] = `
<div class="c-bolt-floating-action-buttons c-bolt-floating-action-buttons--hidden c-bolt-floating-action-buttons--placement-right-end">
  <ul class="c-bolt-floating-action-buttons__list js-bolt-floating-action-buttons-list">
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item">
      <button type="button"
              class="e-bolt-button e-bolt-button--icon-only"
              aria-label="This is a button"
      >
        <span class="e-bolt-button__icon-center"
              aria-hidden="true"
        >
          <svg class="e-bolt-icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <g fill="#151619">
              <path d="M31.4 1.2c-.1-.3-.3-.5-.6-.6-.1 0-9.6-2.8-16 3.6-1.7 1.7-3.3 3.6-4.7 5.6l-.2-.1S5.7 9 3.2 11.5c-1.6 1.8-2.7 4-3.2 6.4-.1.4.1.8.4 1 .4.2.8.1 1.1-.2 1.3-1.3 2.9-2 4.7-2.2-.1.1-.1.3-.2.4-.1.3 0 .7.2 1l7.7 7.7c.3.3.6.3 1 .2l.4-.2c-.2 1.8-1 3.4-2.2 4.7-.4.4-.4.9 0 1.3.2.2.4.3.6.3h.3c2.4-.6 4.6-1.7 6.4-3.2 2.4-2.4 1.8-6.5 1.8-6.6s0-.1-.1-.2c2-1.4 3.8-3 5.6-4.7 6.5-6.4 3.7-15.9 3.7-16zm-4.9 14.7C23 19.4 16.4 23.2 14.9 24L8 17.1c.7-1.3 4.4-8 8-11.6 5-4.9 11.9-3.7 13.7-3.3.5 1.9 1.7 8.8-3.2 13.7zM9 11.5c-.7 1.1-1.3 2.2-1.8 3.2-1.5 0-3 .4-4.4 1 .4-1.1 1.1-2.1 1.8-3 1.1-.9 2.6-1.4 4-1.3zm10.2 15.9c-.9.8-1.9 1.4-3 1.9.7-1.4 1-2.9 1-4.5 1-.5 2.2-1.2 3.2-1.9.3 1.7-.2 3.3-1.2 4.5z">
              </path>
              <path d="M22.9 5.3C20.8 5.3 19 7 19 9.1s1.7 3.9 3.8 3.9c1 0 2-.4 2.8-1.2 1.5-1.5 1.5-4-.1-5.4-.7-.7-1.6-1.1-2.6-1.1zm1.4 5.3c-.8.8-2.1.9-2.9.1s-.9-2.1-.1-2.9 2.1-.9 2.9-.1l.1.1c.8.7.8 2 0 2.8zM4.7 22.6C3.6 23.7 3.1 27.3 3 28c0 .3.1.6.3.8.2.1.4.2.6.2H4c.7-.1 4.2-.6 5.3-1.7 1.3-1.3 1.3-3.4 0-4.7-1.2-1.3-3.3-1.3-4.6 0zM8.1 26c-1 .5-2 .9-3.1 1 .1-1.1.5-2.1 1-3.1.3-.3.6-.4 1-.4s.8.2 1 .4c.7.5.7 1.5.1 2.1z">
              </path>
            </g>
          </svg>
        </span>
      </button>
    </li>
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item">
      <button type="button"
              class="e-bolt-button e-bolt-button--icon-only"
              aria-label="This is a button"
      >
        <span class="e-bolt-button__icon-center"
              aria-hidden="true"
        >
          <svg class="e-bolt-icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <g fill="#151619">
              <path d="M31.4 1.2c-.1-.3-.3-.5-.6-.6-.1 0-9.6-2.8-16 3.6-1.7 1.7-3.3 3.6-4.7 5.6l-.2-.1S5.7 9 3.2 11.5c-1.6 1.8-2.7 4-3.2 6.4-.1.4.1.8.4 1 .4.2.8.1 1.1-.2 1.3-1.3 2.9-2 4.7-2.2-.1.1-.1.3-.2.4-.1.3 0 .7.2 1l7.7 7.7c.3.3.6.3 1 .2l.4-.2c-.2 1.8-1 3.4-2.2 4.7-.4.4-.4.9 0 1.3.2.2.4.3.6.3h.3c2.4-.6 4.6-1.7 6.4-3.2 2.4-2.4 1.8-6.5 1.8-6.6s0-.1-.1-.2c2-1.4 3.8-3 5.6-4.7 6.5-6.4 3.7-15.9 3.7-16zm-4.9 14.7C23 19.4 16.4 23.2 14.9 24L8 17.1c.7-1.3 4.4-8 8-11.6 5-4.9 11.9-3.7 13.7-3.3.5 1.9 1.7 8.8-3.2 13.7zM9 11.5c-.7 1.1-1.3 2.2-1.8 3.2-1.5 0-3 .4-4.4 1 .4-1.1 1.1-2.1 1.8-3 1.1-.9 2.6-1.4 4-1.3zm10.2 15.9c-.9.8-1.9 1.4-3 1.9.7-1.4 1-2.9 1-4.5 1-.5 2.2-1.2 3.2-1.9.3 1.7-.2 3.3-1.2 4.5z">
              </path>
              <path d="M22.9 5.3C20.8 5.3 19 7 19 9.1s1.7 3.9 3.8 3.9c1 0 2-.4 2.8-1.2 1.5-1.5 1.5-4-.1-5.4-.7-.7-1.6-1.1-2.6-1.1zm1.4 5.3c-.8.8-2.1.9-2.9.1s-.9-2.1-.1-2.9 2.1-.9 2.9-.1l.1.1c.8.7.8 2 0 2.8zM4.7 22.6C3.6 23.7 3.1 27.3 3 28c0 .3.1.6.3.8.2.1.4.2.6.2H4c.7-.1 4.2-.6 5.3-1.7 1.3-1.3 1.3-3.4 0-4.7-1.2-1.3-3.3-1.3-4.6 0zM8.1 26c-1 .5-2 .9-3.1 1 .1-1.1.5-2.1 1-3.1.3-.3.6-.4 1-.4s.8.2 1 .4c.7.5.7 1.5.1 2.1z">
              </path>
            </g>
          </svg>
        </span>
      </button>
    </li>
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item c-bolt-floating-action-buttons__list-item--has-children">
      <bolt-tooltip placement="left"
                    uuid="12345"
      >
        <button type="button"
                aria-expanded="false"
                class="e-bolt-button--icon-only js-bolt-floating-action-buttons-toggle e-bolt-button"
        >
          <span class="e-bolt-button__icon-center js-bolt-floating-action-buttons-toggle-icon">
            <svg class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M19.2 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M6.4 16c0 1.8-1.4 3.2-3.2 3.2S0 17.8 0 16s1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M32 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2S32 14.2 32 16">
                </path>
              </g>
            </svg>
          </span>
          <span class="e-bolt-button__icon-center js-bolt-floating-action-buttons-toggle-icon-close">
            <svg class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <path fill="#151619"
                    fill-rule="evenodd"
                    d="M18.6 16l9.8-9.8c.7-.7.7-1.9 0-2.6s-1.9-.7-2.6 0L16 13.4 6.2 3.5c-.7-.7-1.9-.7-2.6 0s-.7 1.9 0 2.6l9.8 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.5.8.7 1.3.7s1-.2 1.3-.6l9.8-9.8 9.8 9.8c.3.3.8.6 1.3.6s1-.2 1.3-.6c.7-.7.7-1.9 0-2.6z"
                    clip-rule="evenodd"
              >
              </path>
            </svg>
          </span>
        </button>
        <span slot="content">
          Toggle Menu
        </span>
      </bolt-tooltip>
      <ul class="c-bolt-floating-action-buttons__list js-bolt-floating-action-buttons-list">
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Bolt Floating Action Buttons placement: right 1`] = `
<div class="c-bolt-floating-action-buttons c-bolt-floating-action-buttons--hidden c-bolt-floating-action-buttons--placement-right">
  <ul class="c-bolt-floating-action-buttons__list js-bolt-floating-action-buttons-list">
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item">
      <button type="button"
              class="e-bolt-button e-bolt-button--icon-only"
              aria-label="This is a button"
      >
        <span class="e-bolt-button__icon-center"
              aria-hidden="true"
        >
          <svg class="e-bolt-icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <g fill="#151619">
              <path d="M31.4 1.2c-.1-.3-.3-.5-.6-.6-.1 0-9.6-2.8-16 3.6-1.7 1.7-3.3 3.6-4.7 5.6l-.2-.1S5.7 9 3.2 11.5c-1.6 1.8-2.7 4-3.2 6.4-.1.4.1.8.4 1 .4.2.8.1 1.1-.2 1.3-1.3 2.9-2 4.7-2.2-.1.1-.1.3-.2.4-.1.3 0 .7.2 1l7.7 7.7c.3.3.6.3 1 .2l.4-.2c-.2 1.8-1 3.4-2.2 4.7-.4.4-.4.9 0 1.3.2.2.4.3.6.3h.3c2.4-.6 4.6-1.7 6.4-3.2 2.4-2.4 1.8-6.5 1.8-6.6s0-.1-.1-.2c2-1.4 3.8-3 5.6-4.7 6.5-6.4 3.7-15.9 3.7-16zm-4.9 14.7C23 19.4 16.4 23.2 14.9 24L8 17.1c.7-1.3 4.4-8 8-11.6 5-4.9 11.9-3.7 13.7-3.3.5 1.9 1.7 8.8-3.2 13.7zM9 11.5c-.7 1.1-1.3 2.2-1.8 3.2-1.5 0-3 .4-4.4 1 .4-1.1 1.1-2.1 1.8-3 1.1-.9 2.6-1.4 4-1.3zm10.2 15.9c-.9.8-1.9 1.4-3 1.9.7-1.4 1-2.9 1-4.5 1-.5 2.2-1.2 3.2-1.9.3 1.7-.2 3.3-1.2 4.5z">
              </path>
              <path d="M22.9 5.3C20.8 5.3 19 7 19 9.1s1.7 3.9 3.8 3.9c1 0 2-.4 2.8-1.2 1.5-1.5 1.5-4-.1-5.4-.7-.7-1.6-1.1-2.6-1.1zm1.4 5.3c-.8.8-2.1.9-2.9.1s-.9-2.1-.1-2.9 2.1-.9 2.9-.1l.1.1c.8.7.8 2 0 2.8zM4.7 22.6C3.6 23.7 3.1 27.3 3 28c0 .3.1.6.3.8.2.1.4.2.6.2H4c.7-.1 4.2-.6 5.3-1.7 1.3-1.3 1.3-3.4 0-4.7-1.2-1.3-3.3-1.3-4.6 0zM8.1 26c-1 .5-2 .9-3.1 1 .1-1.1.5-2.1 1-3.1.3-.3.6-.4 1-.4s.8.2 1 .4c.7.5.7 1.5.1 2.1z">
              </path>
            </g>
          </svg>
        </span>
      </button>
    </li>
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item">
      <button type="button"
              class="e-bolt-button e-bolt-button--icon-only"
              aria-label="This is a button"
      >
        <span class="e-bolt-button__icon-center"
              aria-hidden="true"
        >
          <svg class="e-bolt-icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <g fill="#151619">
              <path d="M31.4 1.2c-.1-.3-.3-.5-.6-.6-.1 0-9.6-2.8-16 3.6-1.7 1.7-3.3 3.6-4.7 5.6l-.2-.1S5.7 9 3.2 11.5c-1.6 1.8-2.7 4-3.2 6.4-.1.4.1.8.4 1 .4.2.8.1 1.1-.2 1.3-1.3 2.9-2 4.7-2.2-.1.1-.1.3-.2.4-.1.3 0 .7.2 1l7.7 7.7c.3.3.6.3 1 .2l.4-.2c-.2 1.8-1 3.4-2.2 4.7-.4.4-.4.9 0 1.3.2.2.4.3.6.3h.3c2.4-.6 4.6-1.7 6.4-3.2 2.4-2.4 1.8-6.5 1.8-6.6s0-.1-.1-.2c2-1.4 3.8-3 5.6-4.7 6.5-6.4 3.7-15.9 3.7-16zm-4.9 14.7C23 19.4 16.4 23.2 14.9 24L8 17.1c.7-1.3 4.4-8 8-11.6 5-4.9 11.9-3.7 13.7-3.3.5 1.9 1.7 8.8-3.2 13.7zM9 11.5c-.7 1.1-1.3 2.2-1.8 3.2-1.5 0-3 .4-4.4 1 .4-1.1 1.1-2.1 1.8-3 1.1-.9 2.6-1.4 4-1.3zm10.2 15.9c-.9.8-1.9 1.4-3 1.9.7-1.4 1-2.9 1-4.5 1-.5 2.2-1.2 3.2-1.9.3 1.7-.2 3.3-1.2 4.5z">
              </path>
              <path d="M22.9 5.3C20.8 5.3 19 7 19 9.1s1.7 3.9 3.8 3.9c1 0 2-.4 2.8-1.2 1.5-1.5 1.5-4-.1-5.4-.7-.7-1.6-1.1-2.6-1.1zm1.4 5.3c-.8.8-2.1.9-2.9.1s-.9-2.1-.1-2.9 2.1-.9 2.9-.1l.1.1c.8.7.8 2 0 2.8zM4.7 22.6C3.6 23.7 3.1 27.3 3 28c0 .3.1.6.3.8.2.1.4.2.6.2H4c.7-.1 4.2-.6 5.3-1.7 1.3-1.3 1.3-3.4 0-4.7-1.2-1.3-3.3-1.3-4.6 0zM8.1 26c-1 .5-2 .9-3.1 1 .1-1.1.5-2.1 1-3.1.3-.3.6-.4 1-.4s.8.2 1 .4c.7.5.7 1.5.1 2.1z">
              </path>
            </g>
          </svg>
        </span>
      </button>
    </li>
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item c-bolt-floating-action-buttons__list-item--has-children">
      <bolt-tooltip placement="left"
                    uuid="12345"
      >
        <button type="button"
                aria-expanded="false"
                class="e-bolt-button--icon-only js-bolt-floating-action-buttons-toggle e-bolt-button"
        >
          <span class="e-bolt-button__icon-center js-bolt-floating-action-buttons-toggle-icon">
            <svg class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M19.2 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M6.4 16c0 1.8-1.4 3.2-3.2 3.2S0 17.8 0 16s1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M32 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2S32 14.2 32 16">
                </path>
              </g>
            </svg>
          </span>
          <span class="e-bolt-button__icon-center js-bolt-floating-action-buttons-toggle-icon-close">
            <svg class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <path fill="#151619"
                    fill-rule="evenodd"
                    d="M18.6 16l9.8-9.8c.7-.7.7-1.9 0-2.6s-1.9-.7-2.6 0L16 13.4 6.2 3.5c-.7-.7-1.9-.7-2.6 0s-.7 1.9 0 2.6l9.8 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.5.8.7 1.3.7s1-.2 1.3-.6l9.8-9.8 9.8 9.8c.3.3.8.6 1.3.6s1-.2 1.3-.6c.7-.7.7-1.9 0-2.6z"
                    clip-rule="evenodd"
              >
              </path>
            </svg>
          </span>
        </button>
        <span slot="content">
          Toggle Menu
        </span>
      </bolt-tooltip>
      <ul class="c-bolt-floating-action-buttons__list js-bolt-floating-action-buttons-list">
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Bolt Floating Action Buttons placement: right-end 1`] = `
<div class="c-bolt-floating-action-buttons c-bolt-floating-action-buttons--hidden c-bolt-floating-action-buttons--placement-right-end">
  <ul class="c-bolt-floating-action-buttons__list js-bolt-floating-action-buttons-list">
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item">
      <button type="button"
              class="e-bolt-button e-bolt-button--icon-only"
              aria-label="This is a button"
      >
        <span class="e-bolt-button__icon-center"
              aria-hidden="true"
        >
          <svg class="e-bolt-icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <g fill="#151619">
              <path d="M31.4 1.2c-.1-.3-.3-.5-.6-.6-.1 0-9.6-2.8-16 3.6-1.7 1.7-3.3 3.6-4.7 5.6l-.2-.1S5.7 9 3.2 11.5c-1.6 1.8-2.7 4-3.2 6.4-.1.4.1.8.4 1 .4.2.8.1 1.1-.2 1.3-1.3 2.9-2 4.7-2.2-.1.1-.1.3-.2.4-.1.3 0 .7.2 1l7.7 7.7c.3.3.6.3 1 .2l.4-.2c-.2 1.8-1 3.4-2.2 4.7-.4.4-.4.9 0 1.3.2.2.4.3.6.3h.3c2.4-.6 4.6-1.7 6.4-3.2 2.4-2.4 1.8-6.5 1.8-6.6s0-.1-.1-.2c2-1.4 3.8-3 5.6-4.7 6.5-6.4 3.7-15.9 3.7-16zm-4.9 14.7C23 19.4 16.4 23.2 14.9 24L8 17.1c.7-1.3 4.4-8 8-11.6 5-4.9 11.9-3.7 13.7-3.3.5 1.9 1.7 8.8-3.2 13.7zM9 11.5c-.7 1.1-1.3 2.2-1.8 3.2-1.5 0-3 .4-4.4 1 .4-1.1 1.1-2.1 1.8-3 1.1-.9 2.6-1.4 4-1.3zm10.2 15.9c-.9.8-1.9 1.4-3 1.9.7-1.4 1-2.9 1-4.5 1-.5 2.2-1.2 3.2-1.9.3 1.7-.2 3.3-1.2 4.5z">
              </path>
              <path d="M22.9 5.3C20.8 5.3 19 7 19 9.1s1.7 3.9 3.8 3.9c1 0 2-.4 2.8-1.2 1.5-1.5 1.5-4-.1-5.4-.7-.7-1.6-1.1-2.6-1.1zm1.4 5.3c-.8.8-2.1.9-2.9.1s-.9-2.1-.1-2.9 2.1-.9 2.9-.1l.1.1c.8.7.8 2 0 2.8zM4.7 22.6C3.6 23.7 3.1 27.3 3 28c0 .3.1.6.3.8.2.1.4.2.6.2H4c.7-.1 4.2-.6 5.3-1.7 1.3-1.3 1.3-3.4 0-4.7-1.2-1.3-3.3-1.3-4.6 0zM8.1 26c-1 .5-2 .9-3.1 1 .1-1.1.5-2.1 1-3.1.3-.3.6-.4 1-.4s.8.2 1 .4c.7.5.7 1.5.1 2.1z">
              </path>
            </g>
          </svg>
        </span>
      </button>
    </li>
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item">
      <button type="button"
              class="e-bolt-button e-bolt-button--icon-only"
              aria-label="This is a button"
      >
        <span class="e-bolt-button__icon-center"
              aria-hidden="true"
        >
          <svg class="e-bolt-icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <g fill="#151619">
              <path d="M31.4 1.2c-.1-.3-.3-.5-.6-.6-.1 0-9.6-2.8-16 3.6-1.7 1.7-3.3 3.6-4.7 5.6l-.2-.1S5.7 9 3.2 11.5c-1.6 1.8-2.7 4-3.2 6.4-.1.4.1.8.4 1 .4.2.8.1 1.1-.2 1.3-1.3 2.9-2 4.7-2.2-.1.1-.1.3-.2.4-.1.3 0 .7.2 1l7.7 7.7c.3.3.6.3 1 .2l.4-.2c-.2 1.8-1 3.4-2.2 4.7-.4.4-.4.9 0 1.3.2.2.4.3.6.3h.3c2.4-.6 4.6-1.7 6.4-3.2 2.4-2.4 1.8-6.5 1.8-6.6s0-.1-.1-.2c2-1.4 3.8-3 5.6-4.7 6.5-6.4 3.7-15.9 3.7-16zm-4.9 14.7C23 19.4 16.4 23.2 14.9 24L8 17.1c.7-1.3 4.4-8 8-11.6 5-4.9 11.9-3.7 13.7-3.3.5 1.9 1.7 8.8-3.2 13.7zM9 11.5c-.7 1.1-1.3 2.2-1.8 3.2-1.5 0-3 .4-4.4 1 .4-1.1 1.1-2.1 1.8-3 1.1-.9 2.6-1.4 4-1.3zm10.2 15.9c-.9.8-1.9 1.4-3 1.9.7-1.4 1-2.9 1-4.5 1-.5 2.2-1.2 3.2-1.9.3 1.7-.2 3.3-1.2 4.5z">
              </path>
              <path d="M22.9 5.3C20.8 5.3 19 7 19 9.1s1.7 3.9 3.8 3.9c1 0 2-.4 2.8-1.2 1.5-1.5 1.5-4-.1-5.4-.7-.7-1.6-1.1-2.6-1.1zm1.4 5.3c-.8.8-2.1.9-2.9.1s-.9-2.1-.1-2.9 2.1-.9 2.9-.1l.1.1c.8.7.8 2 0 2.8zM4.7 22.6C3.6 23.7 3.1 27.3 3 28c0 .3.1.6.3.8.2.1.4.2.6.2H4c.7-.1 4.2-.6 5.3-1.7 1.3-1.3 1.3-3.4 0-4.7-1.2-1.3-3.3-1.3-4.6 0zM8.1 26c-1 .5-2 .9-3.1 1 .1-1.1.5-2.1 1-3.1.3-.3.6-.4 1-.4s.8.2 1 .4c.7.5.7 1.5.1 2.1z">
              </path>
            </g>
          </svg>
        </span>
      </button>
    </li>
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item c-bolt-floating-action-buttons__list-item--has-children">
      <bolt-tooltip placement="left"
                    uuid="12345"
      >
        <button type="button"
                aria-expanded="false"
                class="e-bolt-button--icon-only js-bolt-floating-action-buttons-toggle e-bolt-button"
        >
          <span class="e-bolt-button__icon-center js-bolt-floating-action-buttons-toggle-icon">
            <svg class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M19.2 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M6.4 16c0 1.8-1.4 3.2-3.2 3.2S0 17.8 0 16s1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M32 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2S32 14.2 32 16">
                </path>
              </g>
            </svg>
          </span>
          <span class="e-bolt-button__icon-center js-bolt-floating-action-buttons-toggle-icon-close">
            <svg class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <path fill="#151619"
                    fill-rule="evenodd"
                    d="M18.6 16l9.8-9.8c.7-.7.7-1.9 0-2.6s-1.9-.7-2.6 0L16 13.4 6.2 3.5c-.7-.7-1.9-.7-2.6 0s-.7 1.9 0 2.6l9.8 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.5.8.7 1.3.7s1-.2 1.3-.6l9.8-9.8 9.8 9.8c.3.3.8.6 1.3.6s1-.2 1.3-.6c.7-.7.7-1.9 0-2.6z"
                    clip-rule="evenodd"
              >
              </path>
            </svg>
          </span>
        </button>
        <span slot="content">
          Toggle Menu
        </span>
      </bolt-tooltip>
      <ul class="c-bolt-floating-action-buttons__list js-bolt-floating-action-buttons-list">
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Bolt Floating Action Buttons placement: right-start 1`] = `
<div class="c-bolt-floating-action-buttons c-bolt-floating-action-buttons--hidden c-bolt-floating-action-buttons--placement-right-start">
  <ul class="c-bolt-floating-action-buttons__list js-bolt-floating-action-buttons-list">
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item">
      <button type="button"
              class="e-bolt-button e-bolt-button--icon-only"
              aria-label="This is a button"
      >
        <span class="e-bolt-button__icon-center"
              aria-hidden="true"
        >
          <svg class="e-bolt-icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <g fill="#151619">
              <path d="M31.4 1.2c-.1-.3-.3-.5-.6-.6-.1 0-9.6-2.8-16 3.6-1.7 1.7-3.3 3.6-4.7 5.6l-.2-.1S5.7 9 3.2 11.5c-1.6 1.8-2.7 4-3.2 6.4-.1.4.1.8.4 1 .4.2.8.1 1.1-.2 1.3-1.3 2.9-2 4.7-2.2-.1.1-.1.3-.2.4-.1.3 0 .7.2 1l7.7 7.7c.3.3.6.3 1 .2l.4-.2c-.2 1.8-1 3.4-2.2 4.7-.4.4-.4.9 0 1.3.2.2.4.3.6.3h.3c2.4-.6 4.6-1.7 6.4-3.2 2.4-2.4 1.8-6.5 1.8-6.6s0-.1-.1-.2c2-1.4 3.8-3 5.6-4.7 6.5-6.4 3.7-15.9 3.7-16zm-4.9 14.7C23 19.4 16.4 23.2 14.9 24L8 17.1c.7-1.3 4.4-8 8-11.6 5-4.9 11.9-3.7 13.7-3.3.5 1.9 1.7 8.8-3.2 13.7zM9 11.5c-.7 1.1-1.3 2.2-1.8 3.2-1.5 0-3 .4-4.4 1 .4-1.1 1.1-2.1 1.8-3 1.1-.9 2.6-1.4 4-1.3zm10.2 15.9c-.9.8-1.9 1.4-3 1.9.7-1.4 1-2.9 1-4.5 1-.5 2.2-1.2 3.2-1.9.3 1.7-.2 3.3-1.2 4.5z">
              </path>
              <path d="M22.9 5.3C20.8 5.3 19 7 19 9.1s1.7 3.9 3.8 3.9c1 0 2-.4 2.8-1.2 1.5-1.5 1.5-4-.1-5.4-.7-.7-1.6-1.1-2.6-1.1zm1.4 5.3c-.8.8-2.1.9-2.9.1s-.9-2.1-.1-2.9 2.1-.9 2.9-.1l.1.1c.8.7.8 2 0 2.8zM4.7 22.6C3.6 23.7 3.1 27.3 3 28c0 .3.1.6.3.8.2.1.4.2.6.2H4c.7-.1 4.2-.6 5.3-1.7 1.3-1.3 1.3-3.4 0-4.7-1.2-1.3-3.3-1.3-4.6 0zM8.1 26c-1 .5-2 .9-3.1 1 .1-1.1.5-2.1 1-3.1.3-.3.6-.4 1-.4s.8.2 1 .4c.7.5.7 1.5.1 2.1z">
              </path>
            </g>
          </svg>
        </span>
      </button>
    </li>
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item">
      <button type="button"
              class="e-bolt-button e-bolt-button--icon-only"
              aria-label="This is a button"
      >
        <span class="e-bolt-button__icon-center"
              aria-hidden="true"
        >
          <svg class="e-bolt-icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <g fill="#151619">
              <path d="M31.4 1.2c-.1-.3-.3-.5-.6-.6-.1 0-9.6-2.8-16 3.6-1.7 1.7-3.3 3.6-4.7 5.6l-.2-.1S5.7 9 3.2 11.5c-1.6 1.8-2.7 4-3.2 6.4-.1.4.1.8.4 1 .4.2.8.1 1.1-.2 1.3-1.3 2.9-2 4.7-2.2-.1.1-.1.3-.2.4-.1.3 0 .7.2 1l7.7 7.7c.3.3.6.3 1 .2l.4-.2c-.2 1.8-1 3.4-2.2 4.7-.4.4-.4.9 0 1.3.2.2.4.3.6.3h.3c2.4-.6 4.6-1.7 6.4-3.2 2.4-2.4 1.8-6.5 1.8-6.6s0-.1-.1-.2c2-1.4 3.8-3 5.6-4.7 6.5-6.4 3.7-15.9 3.7-16zm-4.9 14.7C23 19.4 16.4 23.2 14.9 24L8 17.1c.7-1.3 4.4-8 8-11.6 5-4.9 11.9-3.7 13.7-3.3.5 1.9 1.7 8.8-3.2 13.7zM9 11.5c-.7 1.1-1.3 2.2-1.8 3.2-1.5 0-3 .4-4.4 1 .4-1.1 1.1-2.1 1.8-3 1.1-.9 2.6-1.4 4-1.3zm10.2 15.9c-.9.8-1.9 1.4-3 1.9.7-1.4 1-2.9 1-4.5 1-.5 2.2-1.2 3.2-1.9.3 1.7-.2 3.3-1.2 4.5z">
              </path>
              <path d="M22.9 5.3C20.8 5.3 19 7 19 9.1s1.7 3.9 3.8 3.9c1 0 2-.4 2.8-1.2 1.5-1.5 1.5-4-.1-5.4-.7-.7-1.6-1.1-2.6-1.1zm1.4 5.3c-.8.8-2.1.9-2.9.1s-.9-2.1-.1-2.9 2.1-.9 2.9-.1l.1.1c.8.7.8 2 0 2.8zM4.7 22.6C3.6 23.7 3.1 27.3 3 28c0 .3.1.6.3.8.2.1.4.2.6.2H4c.7-.1 4.2-.6 5.3-1.7 1.3-1.3 1.3-3.4 0-4.7-1.2-1.3-3.3-1.3-4.6 0zM8.1 26c-1 .5-2 .9-3.1 1 .1-1.1.5-2.1 1-3.1.3-.3.6-.4 1-.4s.8.2 1 .4c.7.5.7 1.5.1 2.1z">
              </path>
            </g>
          </svg>
        </span>
      </button>
    </li>
    <li class="c-bolt-floating-action-buttons__list-item js-bolt-floating-action-buttons-list-item c-bolt-floating-action-buttons__list-item--has-children">
      <bolt-tooltip placement="left"
                    uuid="12345"
      >
        <button type="button"
                aria-expanded="false"
                class="e-bolt-button--icon-only js-bolt-floating-action-buttons-toggle e-bolt-button"
        >
          <span class="e-bolt-button__icon-center js-bolt-floating-action-buttons-toggle-icon">
            <svg class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M19.2 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M6.4 16c0 1.8-1.4 3.2-3.2 3.2S0 17.8 0 16s1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M32 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2S32 14.2 32 16">
                </path>
              </g>
            </svg>
          </span>
          <span class="e-bolt-button__icon-center js-bolt-floating-action-buttons-toggle-icon-close">
            <svg class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <path fill="#151619"
                    fill-rule="evenodd"
                    d="M18.6 16l9.8-9.8c.7-.7.7-1.9 0-2.6s-1.9-.7-2.6 0L16 13.4 6.2 3.5c-.7-.7-1.9-.7-2.6 0s-.7 1.9 0 2.6l9.8 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.5.8.7 1.3.7s1-.2 1.3-.6l9.8-9.8 9.8 9.8c.3.3.8.6 1.3.6s1-.2 1.3-.6c.7-.7.7-1.9 0-2.6z"
                    clip-rule="evenodd"
              >
              </path>
            </svg>
          </span>
        </button>
        <span slot="content">
          Toggle Menu
        </span>
      </bolt-tooltip>
      <ul class="c-bolt-floating-action-buttons__list js-bolt-floating-action-buttons-list">
      </ul>
    </li>
  </ul>
</div>
`;
